[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenuBackground" type="ColorRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.298039, 0.298039, 0.298039, 0.705882 )
script = ExtResource( 1 )

[node name="PauseMenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenuContainer"]
margin_right = 350.0
margin_bottom = 60.0
rect_min_size = Vector2( 350, 60 )
text = "Resume"

[node name="ControlsButton" type="Button" parent="PauseMenuContainer"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 124.0
rect_min_size = Vector2( 350, 60 )
text = "Controls"

[node name="OptionsButton" type="Button" parent="PauseMenuContainer"]
margin_top = 128.0
margin_right = 350.0
margin_bottom = 188.0
rect_min_size = Vector2( 350, 60 )
text = "Options"

[node name="QuitButton" type="Button" parent="PauseMenuContainer"]
margin_top = 192.0
margin_right = 350.0
margin_bottom = 252.0
rect_min_size = Vector2( 350, 60 )
text = "Quit"

[node name="ControlsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -20.0
margin_right = 58.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLabel" type="Label" parent="ControlsContainer"]
margin_right = 350.0
margin_bottom = 60.0
rect_min_size = Vector2( 350, 60 )
text = "Keybinds"
align = 1
valign = 1

[node name="Controls" type="HBoxContainer" parent="ControlsContainer"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MovementKeys" type="Label" parent="ControlsContainer/Controls"]
margin_left = 82.0
margin_right = 155.0
margin_bottom = 82.0
text = "Forward: W
Back: S
Left: A
Right: D
Boost: Shift"
align = 2

[node name="MiscKeys" type="Label" parent="ControlsContainer/Controls"]
margin_left = 159.0
margin_top = 8.0
margin_right = 267.0
margin_bottom = 73.0
text = "Fire: Mouse 1
Menu: Escape
Tab: Show Cursor
Spin: Space"

[node name="BackButton" type="Button" parent="ControlsContainer"]
margin_top = 150.0
margin_right = 350.0
margin_bottom = 210.0
rect_min_size = Vector2( 350, 60 )
text = "Back"

[connection signal="pressed" from="PauseMenuContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenuContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="PauseMenuContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="PauseMenuContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ControlsContainer/BackButton" to="." method="_on_BackButton_pressed"]
